---------------------
subunit release notes
---------------------

NEXT (In development)
---------------------

IMPROVEMENTS
~~~~~~~~~~~~

BUG FIXES
~~~~~~~~~

* Fix "subunit-filter --fixup-expected-failures"
  on Python 3. (Jelmer Vernooĳ)

1.4.1

IMPROVEMENTS
~~~~~~~~~~~~

* Add support for Python 3.9
  (Thomas Grainger)

* Add support for Python 3.10
  (Stephen Finucane)

* Drop support for Python 2.7, 3.4, and 3.5
  (Stephen Finucane)

* Convert python scripts to entry_points.
  (Matthew Treinish)

* Migrate CI from travis to GitHub actions.
  (Matthew Treinish)

* Add options to output filter to set timestamps.
  (Matthew Treinish)

* Remove dependency on unittest2.
  (Matěj Cepl)

BUGFIXES
~~~~~~~~

* Fix tests with testtools >= 2.5.0.
  (Colin Watson)

* Mark rawstrings as such, fixing warnings.
  (Stephen Finucane)

1.4.0
-----

IMPROVEMENTS
~~~~~~~~~~~~

* Drop Python 3.3 support, and test on 3.5 and 3.6.
  (Jelmer Vernooĳ)

* Add support for Python 3.7 and 3.8.
  (Matthew Treinish)

* Improve readability of SubUnit v2 spec.
  (Sergey Bronnikov)

* Add license to setup.py. (Sergiu)

BUGFIXES
~~~~~~~~

* Migrate Gtk interface to GObject introspection.
  (Haikel Guemar)

* Fix file open for python3. (Quique Llorente)

* Check written bytes are not None before summing them to offset.
  (Federico Ressi, #1845631)

* Correctly handle py3 RawIOBase read(). (Stephen Finucane, partially #1813147)

1.3.0
-----

IMPROVEMENTS
~~~~~~~~~~~~

* Add a --rename flag to subunit-filter.
  (Jelmer Vernooĳ, #1758522)

BUGFIXES
~~~~~~~~

* Fix make_stream_binary with FileIO object inputs.
  (Matthew Treinish)

* Fix v2 run() on windows platforms.
  (Claudiu Belu)

1.2.0
-----

IMPROVEMENTS
~~~~~~~~~~~~

* Fixed handling of incomplete writes with eventlet on Python3.
  (Victor Stinner)

* Added subunit2disk, which explodes a stream out to files on disk.
  (Robert Collins)

1.1.0
-----

BUGFIXES
~~~~~~~~

* Unencapsulated strings and encapsulated stdout will be forwarded by